crates/java-syntax/tests/snapshots/parser_snapshots__parse_record_with_normal_constructor_like.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
record R(int x) { R() {} }
TOKENS:
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  RECORD_DECL
    MODIFIER_LIST
    IDENTIFIER "record"
    WHITESPACE " "
    IDENTIFIER "R"
    FORMAL_PARAMETERS
      L_PAREN "("
      FORMAL_PARAMETER
        MODIFIER_LIST
        TYPE
          INT_KW "int"
        WHITESPACE " "
        IDENTIFIER "x"
      R_PAREN ")"
    RECORD_BODY
      WHITESPACE " "
      L_BRACE "{"
      CONSTRUCTOR_DECL
        MODIFIER_LIST
        WHITESPACE " "
        IDENTIFIER "R"
        FORMAL_PARAMETERS
          L_PAREN "("
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          R_BRACE "}"
      WHITESPACE " "
      R_BRACE "}"
