crates/java-syntax/tests/snapshots/parser_snapshots__parse_record_with_type_parameters.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
public record R<T, U>(T x, U y) {}
TOKENS:
PUBLIC_KW "public"
WHITESPACE " "
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
L_PAREN "("
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "x"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
WHITESPACE " "
IDENTIFIER "y"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  RECORD_DECL
    MODIFIER_LIST
      PUBLIC_KW "public"
    WHITESPACE " "
    IDENTIFIER "record"
    WHITESPACE " "
    IDENTIFIER "R"
    TYPE_PARAMETERS
      LESS "<"
      TYPE_PARAMETER
        IDENTIFIER "T"
      COMMA ","
      TYPE_PARAMETER
        WHITESPACE " "
        IDENTIFIER "U"
      GREATER ">"
    FORMAL_PARAMETERS
      L_PAREN "("
      FORMAL_PARAMETER
        MODIFIER_LIST
        TYPE
          IDENTIFIER "T"
        WHITESPACE " "
        IDENTIFIER "x"
      COMMA ","
      FORMAL_PARAMETER
        MODIFIER_LIST
        TYPE
          WHITESPACE " "
          IDENTIFIER "U"
        WHITESPACE " "
        IDENTIFIER "y"
      R_PAREN ")"
    RECORD_BODY
      WHITESPACE " "
      L_BRACE "{"
      R_BRACE "}"
