crates/java-syntax/tests/snapshots/parser_snapshots__parse_recovery_compact_constructor_like_in_class.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { A {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        TYPE
          WHITESPACE " "
          IDENTIFIER "A"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            MISSING
        MISSING
      INSTANCE_INITIALIZER
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          R_BRACE "}"
      WHITESPACE " "
      R_BRACE "}"
errors:
  ParseError { kind: ExpectedToken { expected: [IDENTIFIER, UNDERSCORE], found: Some(L_BRACE) }, pos: 4 }
  ParseError { kind: ExpectedToken { expected: [SEMICOLON], found: Some(L_BRACE) }, pos: 4 }
