crates/java-syntax/tests/snapshots/parser_snapshots__parse_recovery_missing_member_name.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int ; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..17
  CLASS_DECL@0..17
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    CLASS_BODY@7..17
      WHITESPACE@7..8 " "
      L_BRACE@8..9 "{"
      FIELD_DECL@9..15
        WHITESPACE@9..10 " "
        TYPE@10..13
          INT_KW@10..13 "int"
        VARIABLE_DECLARATOR_LIST@13..14
          WHITESPACE@13..14 " "
          VARIABLE_DECLARATOR@14..14
            MISSING@14..14
        SEMICOLON@14..15 ";"
      WHITESPACE@15..16 " "
      R_BRACE@16..17 "}"
