crates/java-syntax/tests/snapshots/parser_snapshots__parse_switch_pattern_case.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func(Object obj) {
        switch (obj) {
            case String s -> System.out.println(s);
            case Integer _ -> System.out.println("Integer");
            default -> {}
        }
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
IDENTIFIER "Object"
WHITESPACE " "
IDENTIFIER "obj"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
SWITCH_KW "switch"
WHITESPACE " "
L_PAREN "("
IDENTIFIER "obj"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
WHITESPACE " "
ARROW "->"
WHITESPACE " "
IDENTIFIER "System"
DOT "."
IDENTIFIER "out"
DOT "."
IDENTIFIER "println"
L_PAREN "("
IDENTIFIER "s"
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n            "
CASE_KW "case"
WHITESPACE " "
IDENTIFIER "Integer"
WHITESPACE " "
UNDERSCORE "_"
WHITESPACE " "
ARROW "->"
WHITESPACE " "
IDENTIFIER "System"
DOT "."
IDENTIFIER "out"
DOT "."
IDENTIFIER "println"
L_PAREN "("
STRING_LIT "\"Integer\""
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n            "
DEFAULT_KW "default"
WHITESPACE " "
ARROW "->"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n        "
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "Test"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      METHOD_DECL
        WHITESPACE "\n    "
        VOID_KW "void"
        WHITESPACE " "
        IDENTIFIER "func"
        FORMAL_PARAMETERS
          L_PAREN "("
          FORMAL_PARAMETER
            TYPE
              QUALIFIED_NAME
                IDENTIFIER "Object"
            WHITESPACE " "
            IDENTIFIER "obj"
          R_PAREN ")"
        BLOCK
          WHITESPACE " "
          L_BRACE "{"
          SWITCH_STMT
            WHITESPACE "\n        "
            SWITCH_KW "switch"
            WHITESPACE " "
            L_PAREN "("
            LITERAL
              IDENTIFIER "obj"
            R_PAREN ")"
            SWITCH_BLOCK
              WHITESPACE " "
              L_BRACE "{"
              SWITCH_RULE
                SWITCH_LABEL
                  WHITESPACE "\n            "
                  CASE_KW "case"
                  TYPE_PATTERN
                    TYPE
                      QUALIFIED_NAME
                        WHITESPACE " "
                        IDENTIFIER "String"
                    WHITESPACE " "
                    IDENTIFIER "s"
                WHITESPACE " "
                ARROW "->"
                EXPRESSION_STMT
                  METHOD_CALL
                    FIELD_ACCESS
                      FIELD_ACCESS
                        LITERAL
                          WHITESPACE " "
                          IDENTIFIER "System"
                        DOT "."
                        IDENTIFIER "out"
                      DOT "."
                      IDENTIFIER "println"
                    ARGUMENT_LIST
                      L_PAREN "("
                      LITERAL
                        IDENTIFIER "s"
                      R_PAREN ")"
                  SEMICOLON ";"
              SWITCH_RULE
                SWITCH_LABEL
                  WHITESPACE "\n            "
                  CASE_KW "case"
                  TYPE_PATTERN
                    TYPE
                      QUALIFIED_NAME
                        WHITESPACE " "
                        IDENTIFIER "Integer"
                    WHITESPACE " "
                    UNDERSCORE "_"
                WHITESPACE " "
                ARROW "->"
                EXPRESSION_STMT
                  METHOD_CALL
                    FIELD_ACCESS
                      FIELD_ACCESS
                        LITERAL
                          WHITESPACE " "
                          IDENTIFIER "System"
                        DOT "."
                        IDENTIFIER "out"
                      DOT "."
                      IDENTIFIER "println"
                    ARGUMENT_LIST
                      L_PAREN "("
                      LITERAL
                        STRING_LIT "\"Integer\""
                      R_PAREN ")"
                  SEMICOLON ";"
              SWITCH_RULE
                SWITCH_LABEL
                  WHITESPACE "\n            "
                  DEFAULT_KW "default"
                WHITESPACE " "
                ARROW "->"
                BLOCK
                  WHITESPACE " "
                  L_BRACE "{"
                  R_BRACE "}"
              WHITESPACE "\n        "
              R_BRACE "}"
          WHITESPACE "\n    "
          R_BRACE "}"
      WHITESPACE "\n"
      R_BRACE "}"
  WHITESPACE "\n"
